minikube-deploy/microservice-generic/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-booking-system-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ticket-booking-system.local
    http:
      paths:
      - path: /simple-concert-service(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: simple-concert-service-microservice-generic
            port:
              number: 80
      - path: /service-b(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-b
            port:
              number: 80
